2007-03-31  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Add administrative control from tkchat.
	/op /deop /mute /unmute and /kick.
	Added userlist menu items for admin control and display moderators
	separately so they can be identified.

2007-03-25  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Fixed a missing backslash in iq handler. Some
	additional status messages and namespace qualifying. Prefer
	panedwindow to paned widget in tile. Add aqua spacer for
	non-tile. Show url's in status bar.

2007-03-18  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: A number of themeing cleanups. Added a statusbar and
	hooked in some connection status and SSL certificate dialog. Show
	geturl progress during history loading.
	(::tkchat::ShowCertificate): It seems some versions of tls/openssl
	use a different delimiter for the certificate records.
	(::tkchat::CreateGUI): Add check for the ttk::sizegrip widget and
	replace with a frame if not available. (reported by Miguel Sofer).

2007-03-16  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Make use of iocpsock for the XMPP link. Added
	no-cache headers on the history requests to combat site caching of
	history files. Fixed loading of tile 0.8.0

2007-02-27  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Use the new Tcl compatible TIP index.

2007-02-16  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: On linux Button-2 can use used for scrolling.
	removed paste dialog binding (use menu instead).

2007-02-12  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Handle hidden rc file on windows and show a message
	if saving options fails for any reason.

2007-02-10  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Add version fetch and display via tooltip.

2007-02-07  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Make use of tooltip package to show url links. Load